# Raspi-cam

./: raspi_frame2.ppm
consumer/: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_container.sh  entrypoint.sh  package.xml  run_container.sh  setup.sh
consumer/include/nodetemplate/node_network/: node_network_manager.hpp
consumer/include/nodetemplate/state_machine/states/: active_state.hpp  inactive_state.hpp  unconfigured_state.hpp
consumer/src/: lifecycle_node.cpp  nodetemplate.cpp  settings.cpp
consumer/src/node_network/: node_network_manager.cpp
consumer/src/state_machine/states/: active_state.cpp  inactive_state.cpp  unconfigured_state.cpp
provider/: Dockerfile  build_container.sh  entrypoint.sh  run_container.sh  setup.sh
provider/nodetemplate/: CMakeLists.txt  README.md  package.xml
provider/nodetemplate/include/nodetemplate/: lifecycle_node.hpp  settings.hpp
provider/nodetemplate/include/nodetemplate/metadata/: metadata_manager.hpp
provider/nodetemplate/include/nodetemplate/node_network/: node_network_manager.hpp
provider/nodetemplate/include/nodetemplate/state_machine/: lifecycle_state.hpp  lifecycle_state_manager.hpp
provider/nodetemplate/include/nodetemplate/state_machine/states/: unconfigured_state.hpp
provider/nodetemplate/src/: nodetemplate.cpp
provider/nodetemplate/src/metadata/: metadata_manager.cpp
provider/nodetemplate/src/node_network/: node_network_manager.cpp
provider/nodetemplate/src/state_machine/: lifecycle_state.cpp  lifecycle_state_manager.cpp
provider/nodetemplate/src/state_machine/states/: active_state.cpp  inactive_state.cpp  unconfigured_state.cpp
provider/nodetemplate/src/utilities/base64/: base64.cpp
